feat: Add InputNormalizer, enhance detectors, and update tests